compiler-core/src/nix/tests/snapshots/gleam_core__nix__tests__lists__case.snap
---
source: compiler-core/src/nix/tests/lists.rs
expression: "\nfn go(xs) {\n  case xs {\n    [] -> 0\n    [_] -> 1\n    [_, _] -> 2\n    _ -> 9999\n  }\n}\n"
---
let
  inherit (builtins.import ./../gleam.nix) listHasLength;
  
  go =
    xs:
      if listHasLength xs 0
      then 0
      else if listHasLength xs 1
      then 1
      else if listHasLength xs 2
      then 2
      else 9999;
in {}
