compiler-core/src/nix/tests/snapshots/gleam_core__nix__tests__lists__list_literals.snap
---
source: compiler-core/src/nix/tests/lists.rs
expression: "\nfn go(x) {\n    []\n    [1]\n    [1, 2]\n    [1, 2, ..x]\n}\n"
---
let
  inherit (builtins.import ./../gleam.nix) toList;
  listPrepend = (builtins.import ./../gleam.nix).prepend;
  
  go =
    x:
      let
        _'0 = toList [ ];
        _'1 = toList [ 1 ];
        _'2 = toList [ 1 2 ];
      in listPrepend 1 (listPrepend 2 x);
in {}
