compiler-core/src/nix/tests/snapshots/gleam_core__nix__tests__lists__long_list_literals.snap
---
source: compiler-core/src/nix/tests/lists.rs
expression: "\nfn go() {\n  [111111111111111111111111111111111111111111111111111111111111111111111111]\n  [11111111111111111111111111111111111111111111, 1111111111111111111111111111111111111111111]\n}\n"
---
let
  inherit (builtins.import ./../gleam.nix) toList;
  
  go =
    {}:
      let
        _' =
          toList
            [
              111111111111111111111111111111111111111111111111111111111111111111111111
            ];
      in
        builtins.seq
          _'
          (toList
            [
              11111111111111111111111111111111111111111111
              1111111111111111111111111111111111111111111
            ]);
in {}
