compiler-core/src/nix/tests/snapshots/gleam_core__nix__tests__lists__multi_line_list_literals.snap
---
source: compiler-core/src/nix/tests/lists.rs
expression: "\nfn go(x) {\n    [{True 1}]\n}\n"
---
let
  inherit (builtins.import ./../gleam.nix) toList;
  
  go = x: toList [ (let _'0 = true; in 1) ];
in {}
